export enum UserRole {
  viewer,
  moderator,
  admin,
}
